--- a/docs/.vuepress/theme/styles/_layout.scss
+++ b/docs/.vuepress/theme/styles/_layout.scss
@@ -132,7 +132,7 @@ body {
       left: 0;
       opacity: 1;
       transform: translateY(0);
-      pointer-events: auto;
+      pointer-events: all;
       overflow-y: scroll;
       -webkit-overflow-y: scroll;
     }
