--- a/docs/.vuepress/theme/styles/_type.scss
+++ b/docs/.vuepress/theme/styles/_type.scss
@@ -135,12 +135,16 @@ b {
 
   h1 {
     font-size: 2.6em;
+    word-wrap: break-word;
     z-index: 5;
     font-weight: 400;
     margin-bottom: 0.5em;
     font-family: "salomeregular";
     @include media-breakpoint-down(lg) {
       font-size: 2.2em;
+    }
+    @include media-breakpoint-down(md) {
+      font-size: 1.7em;
     }
     &:first-child {
       padding-top: 0;
@@ -152,7 +156,7 @@ b {
     font-weight: 500;
     opacity: 1;
     @include media-breakpoint-down(lg) {
-      font-size: 1.8em;
+      font-size: 1.65em;
     }
 
     + p {
