--- a/docs/.vuepress/theme/styles/landing.scss
+++ b/docs/.vuepress/theme/styles/landing.scss
@@ -336,6 +336,7 @@
       padding-top: 2em;
       color: #fff;
       font-size: 1.3em;
+      
 
       @include media-breakpoint-down(lg) {
         font-size: 1em;
@@ -349,12 +350,16 @@
     }
 
     .hero__headline-main {
-      font-family: "salomeregular"; line-height: 1.4;
+      font-family: "salomeregular";
+      line-height: 1.4;
       display: block;
     }
 
     .hero__headline-secondary {
-      font-weight: 300;font-size: 0.5em;
+      font-weight: 300;
+      font-size: 0.5em;
+      margin-top: 1rem;
+      line-height: 1.6;
     }
 
     .brand-button {
